log/build_2021-05-14_10-15-55/ros2yolo/stderr.log
  File "/home/mingyu/rosyolo_final/install/ros2yolo/lib/python3.8/site-packages/ros2yolo/yolo_map.py", line 190
    else
       ^
SyntaxError: invalid syntax

